@@ -108,7 +108,7 @@ evsig_cb(evutil_socket_t fd, short what, void *arg)
 #define FD_CLOSEONEXEC(x)
 #endif
 
-void
+int
 evsig_init(struct event_base *base)
 {
 	/*
@@ -117,8 +117,16 @@ evsig_init(struct event_base *base)
 	 * signals that got delivered.
 	 */
 	if (evutil_socketpair(
-		    AF_UNIX, SOCK_STREAM, 0, base->sig.ev_signal_pair) == -1)
+		    AF_UNIX, SOCK_STREAM, 0, base->sig.ev_signal_pair) == -1) {
+#ifdef WIN32
+		/* Make this nonfatal on win32, where sometimes people
+		   have localhost firewalled. */
+		event_sock_warn(1, -1, "%s: socketpair", __func__);
+#else
 		event_sock_err(1, -1, "%s: socketpair", __func__);
+#endif
+		return -1;
+	}
 
 	FD_CLOSEONEXEC(base->sig.ev_signal_pair[0]);
 	FD_CLOSEONEXEC(base->sig.ev_signal_pair[1]);
@@ -136,6 +144,8 @@ evsig_init(struct event_base *base)
 
 	base->evsigsel = &evsigops;
 	base->evsigbase = &base->sig;
+
+	return 0;
 }
 
 /* Helper: set the signal handler for evsignal to handler in base, so that
