@@ -32,6 +32,8 @@ Changes in 2.0.2-alpha:
  o Add a new evbuffer_peek() interface to inspect data in an evbuffer without removing it.
  o Fix a deadlock when suspending reads in a bufferevent due to a full buffer. (Spotted by Joachim Bauch.)
  o Fix a memory error when freeing a thread-enabled event base with registered events. (Spotted by Joachim Bauch.)
+ o Try to contain degree of failure when running on a win32 version so heavily firewalled that we can't fake a socketpair.
+
 
 Changes in 2.0.1-alpha:
  o free minheap on event_base_free(); from Christopher Layne
